# SparC

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  README.md  conftest.py  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
docs/: index.md  releasing.md
docs/css/: style.css
docs/examples/: overview.md
docs/getting-started/: installation.md  quick-start.md  training.md
docs/guides/: builders.md  extending.md  queries.md  serialization.md  structures.md
docs/handbook/: architecture.md  compiled-evaluation.md  deep-compilation.md  query-engine.md  serialization-format.md  solvers.md
examples/: bench_gcw.py  bench_inference.py  bench_ll.py  cw_minimization.py  dro.py  exp_minimization.py  gcw_optimization.py  mle.py  robustify.py  robustify_gcw.py  robustify_ogda.py  robustify_ogda_gcw.py  structures.py  train_mnist.py
examples/adversarial_datasets/: accidents_K1.data  accidents_K3.data  accidents_K5.data  ad_K1.data  ad_K3.data  ad_K5.data  baudio_K1.data  baudio_K3.data  baudio_K5.data  bbc_K1.data  bbc_K3.data  bbc_K5.data  bnetflix_K1.data  bnetflix_K3.data  bnetflix_K5.data  book_K1.data  book_K3.data  book_K5.data  cr52_K1.data  cr52_K3.data  cr52_K5.data  cwebkb_K1.data  cwebkb_K3.data  cwebkb_K5.data  dna_K1.data  dna_K3.data  dna_K5.data  jester_K1.data  jester_K3.data  jester_K5.data  kosarek_K1.data  kosarek_K3.data  kosarek_K5.data  moviereview_K1.data  moviereview_K3.data  moviereview_K5.data  msnbc_K1.data  msnbc_K3.data  msnbc_K5.data  msweb_K1.data  (+29 more)
examples/example_pcs/: accidents.json  ad.json  adult.json  baudio.json  bbc.json  bnetflix.json  book.json  c20ng.json  connect4.json  cr52.json  cwebkb.json  dna.json  jester.json  kdd.json  kosarek.json  moviereview.json  msnbc.json  msweb.json  mushrooms.json  nips.json  nltcs.json  ocr_letters.json  plants.json  plants_best_ll_adv.json  pumsb_star.json  rcv1.json  tmovie.json  tretail.json  voting.json
scripts/: generate_api_pages.py
site/: objects.inv  sitemap.xml
site/js/: katex.js
site/search/: search_index.json
sparc/: __init__.py  _graph.cp312-win_amd64.pyd.bak  _graph.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  _graph.pxd  _graph.pyx  _mathutils.pxd  circuit.py  eval.cp312-win_amd64.pyd.bak  eval.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  eval.pxd  eval.pyx  grad.cp312-win_amd64.pyd.bak  grad.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  grad.pxd  grad.pyx  metrics.cp312-win_amd64.pyd.bak  metrics.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  metrics.pxd  metrics.pyx  node_clone.py  nodes.cp312-win_amd64.pyd.bak  nodes.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  nodes.pxd  nodes.pyx  optim.py
sparc/builders/: __init__.py  _factory.py  embedding.py  pyjuice.py  region_graph.py
sparc/deep_compile/: __init__.py  _native.pyx  cache.py  codegen_nodes.py  compat_emitter.py  compiler.py  emitter.py  isa.py  runtime.py  tape.py  ultra_emitter.py
sparc/deep_compile/rt/: sparc_deep_rt.h  sparc_deep_rt_internal.h  sparc_ultra_rt.h
sparc/io/: __init__.py  learned_pc.py  serializer.py
sparc/queries/: __init__.py  _engine.cp312-win_amd64.pyd.bak  _engine.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  _engine.pxd  _engine.pyx  cw.cp312-win_amd64.pyd.bak  cw.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  cw.pyx  esd.cp312-win_amd64.pyd.bak  esd.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  esd.pyx  expectation.cp312-win_amd64.pyd.bak  expectation.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  expectation.pyx  gcw.cp312-win_amd64.pyd.bak  gcw.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  gcw.pyx
sparc/solvers/: assignment.cp312-win_amd64.pyd.bak  assignment.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  assignment.pxd  assignment.pyx  northwest.cp312-win_amd64.pyd.bak  northwest.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  northwest.pxd  northwest.pyx  transport.cp312-win_amd64.pyd.bak  transport.cp314-mingw_x86_64_ucrt_gnu.pyd.bak  transport.pxd  transport.pyx
sparc/structures/: __init__.py  _blocks.py  _chowliu.py  distributions.py  hclt.py  hmm.py  pd.py  rat_spn.py
tests/: conftest.py  dual_path.py  gcw_helpers.py  sparc_helpers.py  test_bernoulli_integration.py  test_circuit_api.py  test_circuit_serializer.py  test_compiled_eval.py  test_compiled_queries.py  test_cw_distance.py  test_deep_compile.py  test_distributions.py  test_embedding_builder.py  test_esd_grad.py  test_exp_query.py  test_gcw_coupling.py  test_gcw_crossterm.py  test_gcw_grad.py  test_likelihood.py  test_likelihood_grad.py  test_log_exp_grad.py  test_metrics.py  test_node_api.py  test_nodes.py  test_nodes_extended.py  test_optim.py  test_properties.py  test_pyjuice_builder.py  test_query_compatibility.py  test_refresh_parameters.py  test_region_graph.py  test_sampling.py  test_solvers.py  test_sparc_extras.py  test_structures.py
