[build-system]
requires = ["setuptools>=61", "wheel", "Cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "sparc"
version = "0.4.1"
description = "SparC: fast, modular sparse probabilistic circuits in Cython (CPU-only)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Adrian Ciotinga" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Cython",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
gurobi = ["gurobipy>=11.0"]
dev = ["pytest>=7.0", "pytest-randomly>=3.15", "scipy>=1.7"]
docs = [
    "Cython>=3.0",
    "numpy>=1.20",
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings-python",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[project.urls]
Documentation = "https://sparc-docs.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["sparc*"]

[tool.setuptools.package-data]
"sparc" = ["*.pyi", "py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gurobi: requires gurobipy and a valid Gurobi license",
    "gcw: GCW coupling / materialization tests (order- and platform-sensitive)",
    "gcw_stress: heap/order stress tests for GCW memoization isolation",
    "solver: direct unit tests for OT / assignment solvers",
    "metrics: ground metric and metric-driven query behavior",
    "eval: likelihood, sampling, and compiled batched evaluation",
    "optim: simplex_step, apply_grads, MLETrainer",
    "circuit: Circuit wrapper (clone, save/load, normalization)",
    "queries: CW / GCW / exp / log_exp query behavior",
    "integration: cross-module leaf-type integration tests",
    "property: cross-cutting invariants (normalization, determinism)",
    "nodes: node construction and validation",
]
filterwarnings = [
    "error::pytest.PytestUnraisableExceptionWarning",
]
