[build-system]
requires = ["setuptools>=61", "wheel", "Cython>=3.0", "numpy>=1.20"]
build-backend = "setuptools.build_meta"

[project]
name = "sparc-pc"
version = "0.5.4"
description = "SparC: fast, modular sparse probabilistic circuits in Cython (CPU-only)"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Adrian Ciotinga" }]
keywords = [
    "probabilistic-circuits",
    "sum-product-networks",
    "cython",
    "wasserstein",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Cython",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
gurobi = ["gurobipy>=11.0"]
dev = [
    "build>=1.0",
    "pytest>=7.0",
    "pytest-randomly>=3.15",
    "scipy>=1.7",
    "twine>=4.0",
]
docs = [
    "Cython>=3.0",
    "numpy>=1.20",
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    "mkdocstrings-python",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[project.urls]
Homepage = "https://github.com/aciotinga/sparc"
Documentation = "https://sparc-docs.readthedocs.io"
Repository = "https://github.com/aciotinga/sparc"
Issues = "https://github.com/aciotinga/sparc/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["sparc*"]

[tool.setuptools.package-data]
"sparc" = ["*.pyx", "*.pxd", "py.typed"]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* cp*t-*"
test-command = "python -c \"import sparc; from sparc import CategoricalInputNode, SumNode; print(sparc.__version__)\""

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "gurobi: requires gurobipy and a valid Gurobi license",
    "gcw: GCW coupling / materialization tests (order- and platform-sensitive)",
    "gcw_stress: heap/order stress tests for GCW memoization isolation",
    "solver: direct unit tests for OT / assignment solvers",
    "metrics: ground metric and metric-driven query behavior",
    "eval: likelihood, sampling, and compiled batched evaluation",
    "optim: simplex_step, apply_grads, MLETrainer",
    "node: CircuitNode API (clone, save/load, normalization)",
    "queries: CW / GCW / exp / log_exp query behavior",
    "integration: cross-module leaf-type integration tests",
    "property: cross-cutting invariants (normalization, determinism)",
    "nodes: node construction and validation",
    "no_dual_path: opt out of object-graph vs compiled parametrization",
]
filterwarnings = [
    "error::pytest.PytestUnraisableExceptionWarning",
]
